[project]
name = "msad"
version = "0.3.5"
authors = [
  { name="Matteo Redaelli", email="matteo.redaelli@gmail.com" },
]
description = "msad is a commandline for interacting with Active Directory"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ldap3",
    "gssapi",
    "cryptography",
    "fire"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
#license = {file = "LICENSE"}
license-files = ["LICENSE"]
#license-expression = "*"

[project.urls]
Homepage = "https://github.com/matteoredaelli/msad"
Issues = "https://github.com/matteoredaelli/msad/issues"

[project.scripts]
msad = "msad.command_line:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
